<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_News">

    <fragment
        android:id="@+id/navigation_News"
        android:name="com.nya.fgopedia.ui.news.NewsFragment"
        android:label="@string/title_News"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_Servant"
        android:name="com.nya.fgopedia.ui.servant.ServantFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_servant" />

    <fragment
        android:id="@+id/navigation_Ce"
        android:name="com.nya.fgopedia.ui.craftessence.CeFragment"
        android:label="@string/craft_essence"
        tools:layout="@layout/fragment_ce" />

</navigation>