<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:id="@+id/detail_servant"
    android:layout_marginEnd="6dp"
    android:layout_marginStart="6dp"
    card_view:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardMaxElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="5dp">

        <ImageView
            android:id="@+id/icom_img"
            android:layout_width="70dp"
            android:layout_height="76dp"
            app:srcCompat="@drawable/icon_mash"
            android:contentDescription="@string/img_servant" />

        <TextView
            android:id="@+id/servant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/icom_img"
            android:text="@string/mash_kyrielight"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/icon_class"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
          android:layout_toEndOf="@id/servant_name"
            app:srcCompat="@drawable/icon_shielder"
            android:contentDescription="@string/logo_class" />

        <TextView
            android:id="@+id/rarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/icom_img"
            android:layout_below="@id/servant_name"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>