<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="6dp"
    android:layout_marginStart="6dp"
    card_view:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardMaxElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="5dp">

        <ImageView
            android:id="@+id/icon_img"
            android:layout_width="70dp"
            android:layout_height="76dp"
            app:srcCompat="@drawable/icon_mash"
            android:contentDescription="@string/img_servant" />

        <TextView
            android:id="@+id/name_ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/icon_img"
            android:text="@string/mash_kyrielight"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/type"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/icon_img"
            android:contentDescription="@string/logo_class"
            app:srcCompat="@drawable/icon_shielder" />

        <TextView
            android:id="@+id/rarity_ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/icon_img"
            android:layout_below="@id/name_ce"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>