<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginEnd="6dp"
    android:layout_marginStart="6dp"
    android:layout_marginBottom="8dp"
    card_view:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardMaxElevation="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="103dp">

        <LinearLayout
            android:id="@+id/llayout"
            android:layout_width="247dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Tanggal"
                android:textColor="@color/bluedark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/judul_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/llayout"
            app:srcCompat="@drawable/banner"
            android:contentDescription="@string/banner" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>